--- a/template/alertd/conf/cloudmon.alerting.conf
+++ b/template/alertd/conf/cloudmon.alerting.conf
@@ -85,7 +85,7 @@ elastic_request_timeout = 60000
 elastic_socket_timeout = 60000
 
 # membership service
-cluster.reg.center.url = <:nginx_ip:>:2182
+cluster.reg.center.url = zooekeeper:2181
 clusteringDataCachedHours = 1
 clusteringDataHoursNeeded = 48
 #cluster.reg.center.digest =
@@ -149,7 +149,7 @@ java.security.krb5.realm = CWIZ.COM
 java.security.krb5.kdc = 172.19.0.40
 sun.security.krb5.debug = false
 hbase.user = hbase/alertd@CWIZ.COM
-hbase.keytab = <:install_root:>/certs/kerberos/hbase.keytab
+hbase.keytab = <:install_root:>/kerberos/hbase.keytab
 
 zookeeper.kerberos.enabled = <:ssl_enable:>
 zookeeper.krb5.realm = CWIZ.COM
