--- a/template/kafka/config/server.properties
+++ b/template/kafka/config/server.properties
@@ -157,11 +157,11 @@ sasl.kerberos.service.name=kafka
 # SSL
 ssl.mechanism.inter.broker.protocol=SSL
 ssl.enabled.mechanisms=SSL
-ssl.keystore.location=/kerberos/server.jks
-ssl.keystore.password=xxx
-ssl.key.password=xxx
-ssl.truststore.location=/kerberos/truststore.jks
-ssl.truststore.password=xxx
+ssl.keystore.location=<:install_root:>/certs/kafka/server.jks
+ssl.keystore.password=<:kafka_ssl_password:>
+ssl.key.password=<:kafka_ssl_password:>
+ssl.truststore.location=<:install_root:>/certs/kafka/truststore.jks
+ssl.truststore.password=<:kafka_ssl_password:>
 ssl.client.auth=required
 ssl.endpoint.identification.algorithm=
 ssl.enabled.protocols=TLSv1.2,TLSv1.1,TLSv1
