--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -215,6 +215,7 @@ services:
     - ${WORK_PATH}/metric-proxy/config/log4j.properties:${WORK_PATH}/metric-proxy/config/log4j.properties
     - ${WORK_PATH}/logs/metric-proxy/:${WORK_PATH}/logs/metric-proxy/
     - ${WORK_PATH}/certs/nginx/:${WORK_PATH}/certs/nginx/
+    - ${WORK_PATH}/certs/mysql/:${WORK_PATH}/certs/mysql/
     - ${WORK_PATH}/certs/metric-proxy/:${WORK_PATH}/certs/metric-proxy/
     depends_on:
     - kafka
@@ -235,6 +236,7 @@ services:
     - ${WORK_PATH}/opentsdb/conf/opentsdb.conf:${WORK_PATH}/opentsdb/conf/opentsdb.conf
     - ${WORK_PATH}/opentsdb/conf/logback.xml:${WORK_PATH}/opentsdb/conf/logback.xml
     - ${WORK_PATH}/startup:${WORK_PATH}/startup
+    - ${WORK_PATH}/certs/mysql/:${WORK_PATH}/certs/mysql/
     - ${WORK_PATH}/logs/opentsdb/:${WORK_PATH}/logs/opentsdb/
     depends_on:
     - hbase-regionserver
@@ -256,6 +258,7 @@ services:
     - ${WORK_PATH}/cmservice/conf/log4j.properties:${WORK_PATH}/cmservice/conf/log4j.properties
     - ${WORK_PATH}/logs/cmservice/:${WORK_PATH}/logs/cmservice/
     - ${WORK_PATH}/certs/nginx/:${WORK_PATH}/certs/nginx/
+    - ${WORK_PATH}/certs/mysql/:${WORK_PATH}/certs/mysql/
     - ${WORK_PATH}/certs/cmservice/:${WORK_PATH}/certs/cmservice/
     depends_on:
     - mysql-server
@@ -276,6 +279,7 @@ services:
     - ${WORK_PATH}/log-processor/config/:${WORK_PATH}/log-processor/config/
     - ${WORK_PATH}/logs/log-processor/:${WORK_PATH}/logs/log-processor/
     - ${WORK_PATH}/certs/nginx/:${WORK_PATH}/certs/nginx/
+    - ${WORK_PATH}/certs/mysql/:${WORK_PATH}/certs/mysql/
     - ${WORK_PATH}/certs/log-processor/:${WORK_PATH}/certs/log-processor/
     depends_on:
     - kafka
@@ -294,6 +298,7 @@ services:
     - ${WORK_PATH}/webfront/conf/defaults.ini:${WORK_PATH}/webfront/conf/defaults.ini
     - ${WORK_PATH}/logs/webfront/:${WORK_PATH}/logs/webfront
     - ${WORK_PATH}/certs/nginx/:${WORK_PATH}/certs/nginx/
+    - ${WORK_PATH}/certs/mysql/:${WORK_PATH}/certs/mysql/
     - ${WORK_PATH}/certs/webfront/:${WORK_PATH}/certs/webfront/
     depends_on:
     - mysql-server
@@ -328,6 +333,7 @@ services:
     - ${WORK_PATH}/permission/config/log4j2.yml:${WORK_PATH}/permission/config/log4j2.yml
     - ${WORK_PATH}/logs/permission/:${WORK_PATH}/logs/permission
     - ${WORK_PATH}/certs/nginx/:${WORK_PATH}/certs/nginx/
+    - ${WORK_PATH}/certs/mysql/:${WORK_PATH}/certs/mysql/
     - ${WORK_PATH}/certs/permission/:${WORK_PATH}/certs/permission/
     depends_on:
     - mysql-server
@@ -347,6 +353,7 @@ services:
     - ${WORK_PATH}/log-analysis/config/log4j.properties:${WORK_PATH}/log-analysis/config/log4j.properties
     - ${WORK_PATH}/logs/log-analysis/:${WORK_PATH}/logs/log-analysis/
     - ${WORK_PATH}/certs/nginx/:${WORK_PATH}/certs/nginx/
+    - ${WORK_PATH}/certs/mysql/:${WORK_PATH}/certs/mysql/
     - ${WORK_PATH}/certs/log-analysis/:${WORK_PATH}/certs/log-analysis/
     depends_on:
     - mysql-server
@@ -383,6 +390,7 @@ services:
     - ${WORK_PATH}/log-pp/config/patterns/:${WORK_PATH}/log-pp/config/patterns/
     - ${WORK_PATH}/logs/log-pp/:${WORK_PATH}/logs/log-pp/
     - ${WORK_PATH}/certs/nginx/:${WORK_PATH}/certs/nginx/
+    - ${WORK_PATH}/certs/mysql/:${WORK_PATH}/certs/mysql/
     - ${WORK_PATH}/certs/log-pp/:${WORK_PATH}/certs/log-pp/
     depends_on:
     - kafka
@@ -403,6 +411,7 @@ services:
     - ${WORK_PATH}/report_tmp/:${WORK_PATH}/report_tmp/
     - ${WORK_PATH}/logs/alertd/:${WORK_PATH}/logs/alertd/
     - ${WORK_PATH}/certs/nginx/:${WORK_PATH}/certs/nginx/
+    - ${WORK_PATH}/certs/mysql/:${WORK_PATH}/certs/mysql/
     - ${WORK_PATH}/certs/alertd/:${WORK_PATH}/certs/alertd/
     depends_on:
     - mysql-server
