添加kafka server.properties certs生成替代compose参数化添加

--- a/template/kafka/config/server.properties
+++ b/template/kafka/config/server.properties
@@ -148,7 +148,9 @@ session.timeout.ms=120000
 heartbeat.interval.ms=20000
 
 zookeeper.connect=zookeeper:2181/kafka
-listeners=SASL_PLAINTEXT://kafka:9093,SSL_PLAINTEXT://kafka:9092
+listeners=SASL_PLAINTEXT://kafka:9093,SSL://kafka:9092
+advertised.listeners=SASL_PLAINTEXT://kafka:9093,SSL://kafka:9092
+advertised.host.name=kafka
 # SASL
 security.inter.broker.protocol=SASL_PLAINTEXT
 sasl.mechanism.inter.broker.protocol=GSSAPI
@@ -157,10 +159,10 @@ sasl.kerberos.service.name=kafka
 # SSL
 ssl.mechanism.inter.broker.protocol=SSL
 ssl.enabled.mechanisms=SSL
-ssl.keystore.location=/kerberos/server.jks
+ssl.keystore.location=/certs/server.jks
 ssl.keystore.password=xxx
 ssl.key.password=xxx
-ssl.truststore.location=/kerberos/truststore.jks
+ssl.truststore.location=/certs/truststore.jks
 ssl.truststore.password=xxx
 ssl.client.auth=required
 ssl.endpoint.identification.algorithm=
