更新kafka es在使用挂载配置时则使用挂载配置替换默认配置,如果有设定自定参数也会替换该文件中的参数

--- a/docker-compose-kerberos-ssl.yml
+++ b/docker-compose-kerberos-ssl.yml
@@ -188,7 +188,7 @@ services:
       - "9200:9200"
     volumes:
       - ${WORK_PATH_TEMP}/elasticsearch/apps:/apps
-      - ${WORK_PATH_TEMP}/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      - ${WORK_PATH_TEMP}/elasticsearch/config/elasticsearch.yml:/config/elasticsearch.yml
       - ${WORK_PATH_TEMP}/data/elasticsearch/:/usr/share/elasticsearch/data/
       - ${WORK_PATH_TEMP}/logs/elasticsearch/:/usr/share/elasticsearch/logs/
       - ${WORK_PATH_TEMP}/certs/elasticsearch/truststore.jks:/usr/share/elasticsearch/config/truststore.jks
