--- a/scripts/install.ini
+++ b/scripts/install.ini
@@ -10,8 +10,10 @@ agent_root = "/opt"
 platform = RedHat
 
 ; Huawei:
-; CloudOps URL
+; CloudOps local URL
 huawei_url =
+; CloudOps virtual URL
+huawei_vurl =
 ; CloudOps AccessKey
 huawei_ak = 468f917903df145ee2e9
 ; CloudOps SecretKey
@@ -71,6 +73,7 @@ token = "0f320e7db4a2d8ba0a3229753bf7c90d821479da"
 local_pkg_dir = "./.local_pkgs"
 local_java_pkg = "OpenJDK8U-jdk_x64_linux_hotspot_8u232b09.tar.gz"
 local_encrypt_jar = "cloudwiz-crypt-1.0-SNAPSHOT-jar-with-dependencies.jar"
+local_es_plugin = "elasticsearch-analysis-ik.tar.gz"
 
 [services]
 include = allocate.ini
