修改 namenode /datanode 地址

--- a/hadoop.env
+++ b/hadoop.env
@@ -11,6 +11,10 @@ HDFS_CONF_dfs_datanode_address=datanode:50010
 HDFS_CONF_dfs_datanode_http_address=datanode:50075
 HDFS_CONF_dfs_datanode_ipc_address=datanode:50020
 HDFS_CONF_dfs_namenode_http-address	=namenode:50070
+HDFS_CONF_dfs_datanode_data_dir=file:///hadoop/dfs/data
+HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
+
+
 
 
 HBASE_CONF_hbase_rootdir=hdfs://namenode:9000/hbase
