--- a/hadoop.env
+++ b/hadoop.env
@@ -3,6 +3,7 @@ CORE_CONF_hadoop_http_staticuser_user=root
 CORE_CONF_hadoop_proxyuser_hue_hosts=*
 CORE_CONF_hadoop_proxyuser_hue_groups=*
 CORE_CONF_io_compression_codecs=org.apache.hadoop.io.compress.SnappyCodec
+CORE_CONF_hadoop_tmp_dir=/hadoop/dfs/name_temp
 
 HDFS_CONF_dfs_webhdfs_enabled=false
 HDFS_CONF_dfs_permissions_enabled=false
