--- a/hadoop.env
+++ b/hadoop.env
@@ -14,6 +14,7 @@ HDFS_CONF_dfs_datanode_ipc_address=datanode:50020
 HDFS_CONF_dfs_namenode_http-address	=namenode:50070
 HDFS_CONF_dfs_datanode_data_dir=file:///hadoop/dfs/data
 HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
+HDFS_CONF_dfs_replication=2
 
 
 HBASE_CONF_hbase_rootdir=hdfs://namenode:9000/hbase
