fix log-processor Server.host => 0.0.0.0

--- a/template/log-processor/config/log.processor.properties
+++ b/template/log-processor/config/log.processor.properties
@@ -21,7 +21,7 @@ Elasticsearch.connect.cluster.name = cloudwiz
 Elasticsearch.connect.client.transport.ignore_cluster_name = true
 Elasticsearch.connect.client.transport.nodes_sampler_interval = 30s
 Elasticsearch.connect.client.transport.ping_timeout = 30s
-Elasticsearch.connect.client.transport.sniff = true
+Elasticsearch.connect.client.transport.sniff = false
 Elasticsearch.transport.addresses = <:elasticsearch_hosts_unquoted:>
 Elasticsearch.transport.port = 9300
 
@@ -110,7 +110,7 @@ Opentsdb.processor.enabled = true
 # Disable a particular topic
 #Opentsdb.processor.7.6.enabled = false
 
-Server.host = <:host_ip:>
+Server.host = 0.0.0.0
 Server.port = 9500
 Server.enabled = true
 Server.stats.port = 9918
