nginx cookie 加入 auth_header

--- a/template/nginx/conf/nginx_ssl.conf
+++ b/template/nginx/conf/nginx_ssl.conf
@@ -167,6 +167,11 @@ http {
 
         location /<:nginx_prefix:> {
             <:nginx_auth_request:>
+            auth_request_set $ac $upstream_cookie_ac;
+            auth_request_set $fsh $upstream_cookie_fsh;
+            add_header Set-Cookie 'accessToken=$ac; Path=/; HttpOnly';
+            add_header Set-Cookie 'freshToken=$fsh; Path=/; HttpOnly';
+
             proxy_pass https://grafana/;
             proxy_ssl_certificate <:install_root:>/certs/webfront/client.crt;
             proxy_ssl_certificate_key <:install_root:>/certs/webfront/client.key;
@@ -174,7 +179,25 @@ http {
         }
 
         location /Intelligent/ {
-            auth_request /auth-proxy;
+            <:nginx_auth_request:>
+            auth_request_set $ac $upstream_cookie_ac;
+            auth_request_set $fsh $upstream_cookie_fsh;
+            add_header Set-Cookie 'accessToken=$ac; Path=/; HttpOnly';
+            add_header Set-Cookie 'freshToken=$fsh; Path=/; HttpOnly';
+
+            proxy_pass https://grafana/;
+            proxy_ssl_certificate <:install_root:>/certs/webfront/client.crt;
+            proxy_ssl_certificate_key <:install_root:>/certs/webfront/client.key;
+            proxy_ssl_trusted_certificate <:install_root:>/certs/webfront/ca.crt;
+        }
+
+        location / {
+            <:nginx_auth_request:>
+            auth_request_set $ac $upstream_cookie_ac;
+            auth_request_set $fsh $upstream_cookie_fsh;
+            add_header Set-Cookie 'accessToken=$ac; Path=/; HttpOnly';
+            add_header Set-Cookie 'freshToken=$fsh; Path=/; HttpOnly';
+
             proxy_pass https://grafana/;
             proxy_ssl_certificate <:install_root:>/certs/webfront/client.crt;
             proxy_ssl_certificate_key <:install_root:>/certs/webfront/client.key;
@@ -187,14 +210,6 @@ http {
             proxy_ssl_certificate <:install_root:>/certs/permission/client.crt;
             proxy_ssl_certificate_key <:install_root:>/certs/permission/client.key;
             proxy_ssl_trusted_certificate <:install_root:>/certs/permission/ca.crt;
-        }
-
-        location / {
-            auth_request /auth-proxy;
-            proxy_pass https://grafana/;
-            proxy_ssl_certificate <:install_root:>/certs/webfront/client.crt;
-            proxy_ssl_certificate_key <:install_root:>/certs/webfront/client.key;
-            proxy_ssl_trusted_certificate <:install_root:>/certs/webfront/ca.crt;
         }
 
         location /_metrics/ {
