更新证书生成配置

--- a/template/tools/certs/ssl/server.conf
+++ b/template/tools/certs/ssl/server.conf
@@ -44,6 +44,7 @@ DNS.24 = 172.19.0.23
 DNS.25 = 172.19.0.24
 DNS.26 = 172.19.0.25
 DNS.27 = nginx
+DNS.28 = <:nginx_ext_ip:>
 IP.1 = <:docker_host_int_ip:> # change_to_the_real_host_ip
 IP.2 = 172.19.0.1
 IP.3 = 172.19.0.2
@@ -70,3 +71,4 @@ IP.23 = 172.19.0.22
 IP.24 = 172.19.0.23
 IP.25 = 172.19.0.24
 IP.26 = 172.19.0.25
+IP.27 = <:nginx_ext_ip:>
