修改alertd错误配置

--- a/template/alertd/conf/cloudmon.alerting.conf
+++ b/template/alertd/conf/cloudmon.alerting.conf
@@ -85,7 +85,7 @@ elastic_request_timeout = 60000
 elastic_socket_timeout = 60000
 
 # membership service
-cluster.reg.center.url = zooekeeper:2181
+cluster.reg.center.url = zookeeper:2181
 clusteringDataCachedHours = 1
 clusteringDataHoursNeeded = 48
 #cluster.reg.center.digest =
