--- a/template/log-processor/config/log4j.properties
+++ b/template/log-processor/config/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.stderr.target=System.err
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 log4j.appender.stderr.layout.ConversionPattern=%5p [%t] %d{ISO8601} %F (line %L) %m%n
 
-log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.R=com.cloudwiz.common.log4j.RollingFileAppender2
 log4j.appender.R.File=<:log_root:>/log-processor/log-processor.log
 
 log4j.appender.R.MaxFileSize=100MB
