修改日志配置文件，修改日志文件权限

--- a/template/metric-proxy/config/log4j.properties
+++ b/template/metric-proxy/config/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.stderr.target=System.err
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 log4j.appender.stderr.layout.ConversionPattern=%5p [%t] %d{ISO8601} %F (line %L) %m%n
 
-log4j.appender.varlog=org.apache.log4j.RollingFileAppender
+log4j.appender.varlog=com.cloudwiz.metricproxy.utils.log4j.RollingFileAppender2
 log4j.appender.varlog.file=<:log_root:>/metric-proxy/metric_proxy.log
 log4j.appender.varlog.maxFileSize=20MB
 log4j.appender.varlog.maxBackupIndex=5
