opentsdb 不打印 trace

--- a/template/opentsdb/conf/opentsdb.conf
+++ b/template/opentsdb/conf/opentsdb.conf
@@ -80,6 +80,7 @@ tsd.core.uid.random_metrics = true
 tsd.query.timeout = 3000
 tsd.http.query.allow_delete = true
 tsd.storage.salt.width = 1
+tsd.http.show_stack_trace = false
 
 hbase.nsre.high_watermark = 4000
 hbase.nsre.low_watermark = 1000
