--- a/template/nginx/conf/nginx_ssl.conf
+++ b/template/nginx/conf/nginx_ssl.conf
@@ -206,6 +206,7 @@ http {
 
         location = /auth-proxy {
             internal;
+            proxy_set_header X-Original-URI $request_uri;
             proxy_pass https://permission/huawei/auth/;
             proxy_ssl_certificate <:install_root:>/certs/permission/client.crt;
             proxy_ssl_certificate_key <:install_root:>/certs/permission/client.key;
