--- a/log-processor/Dockerfile
+++ b/log-processor/Dockerfile
@@ -20,4 +20,4 @@ ENV USER=root
 
 #EXPOSE 9601
 
-CMD ${INSTALL_ROOT}/log-processor/bin/start.sh
+CMD /wait-for-it.sh mysql:3306 --timeout=5 -- ${INSTALL_ROOT}/log-processor/bin/start.sh
