--- a/log-analysis/Dockerfile
+++ b/log-analysis/Dockerfile
@@ -19,4 +19,4 @@ ENV USER=root
 
 EXPOSE 9400
 
-CMD ${INSTALL_ROOT}/log-analysis/bin/start.sh
+CMD /wait-for-it.sh mysql:3306 --timeout=5 -- ${INSTALL_ROOT}/log-analysis/bin/start.sh
