--- a/namenode/Dockerfile
+++ b/namenode/Dockerfile
@@ -6,7 +6,9 @@ ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 HEALTHCHECK CMD curl -f http://localhost:50070/ || exit 1
 
-VOLUME /data/dfs/namenode
+ENV HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
+RUN mkdir -p /hadoop/dfs/name
+VOLUME /hadoop/dfs/name
 
 ADD run.sh /run.sh
 RUN chmod a+x /run.sh
