--- a/datanode/Dockerfile
+++ b/datanode/Dockerfile
@@ -6,7 +6,9 @@ ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 HEALTHCHECK CMD curl -f http://localhost:50075/ || exit 1
 
-VOLUME /data/dfs/datanode
+ENV HDFS_CONF_dfs_datanode_data_dir=file:///hadoop/dfs/data
+RUN mkdir -p /hadoop/dfs/data
+VOLUME /hadoop/dfs/data
 
 ADD run.sh /run.sh
 RUN chmod a+x /run.sh
