修改log-processor 地址

--- a/template/log-processor/config/log.processor.properties
+++ b/template/log-processor/config/log.processor.properties
@@ -83,7 +83,7 @@ Opentsdb.processor.enabled = true
 # Disable a particular topic
 #Opentsdb.processor.7.6.enabled = false
 
-Server.host = <:host_ip:>
+Server.host = log_processor
 #Server.port = 9500
 Server.port = 443
 Server.enabled = true
