--- a/template/log-processor/config/log.processor.properties
+++ b/template/log-processor/config/log.processor.properties
@@ -95,6 +95,14 @@ LogProcessor.numIterationsBetweenBreak = 2048
 
 Opentsdb.max_no_tags = 8
 Opentsdb.proxy.metrics_server_url = <:nginx_protocol:>://<:nginx_ip:>:<:nginx_port:>/_tsdb
+
+Opentsdb.proxy.tsdb.ssl.connection.enabled = <:ssl_enable:>
+Opentsdb.proxy.tsdb.ssl.client.keystore = <:install_root:>/certs/nginx/client.jks
+Opentsdb.proxy.tsdb.ssl.client.key.password = <:ssl_password:>
+Opentsdb.proxy.tsdb.ssl.client.keystore.password = <:ssl_password:>
+Opentsdb.proxy.tsdb.ssl.client.trust.keystore = <:install_root:>/certs/nginx/clientTrust.jks
+Opentsdb.proxy.tsdb.ssl.client.trust.keystore.password = <:ssl_password:>
+
 Opentsdb.proxy.mysql_url = jdbc:mysql://<:nginx_ip:>:3308/<:grafana_database:>?useUnicode=true&characterEncoding=utf8&useSSL=<:ssl_enable:>
 Opentsdb.proxy.mysql_username = <:mysql_username:>
 Opentsdb.proxy.mysql_password = <:mysql_password:>
