--- a/template/opentsdb/conf/opentsdb.conf
+++ b/template/opentsdb/conf/opentsdb.conf
@@ -71,9 +71,6 @@ tsd.core.tag.allow_specialchars = :@#
 tsd.storage.fix_duplicates = true
 tsd.http.request.enable_chunked = true
 tsd.http.request.max_chunk = 131072
-tsd.mysql.url = jdbc:mysql://<:nginx_ip:>:3308/<:grafana_database:>
-tsd.mysql.user = <:mysql_username:>
-tsd.mysql.password = <:mysql_base_password:>
 tsd.http.cachedir = <:install_root:>/opentsdb/cache
 tsd.http.staticroot = <:install_root:>/opentsdb/static
 tsd.core.uid.random_metrics = true
@@ -94,3 +91,24 @@ hbase.security.auth.enable=true
 hbase.security.authentication=kerberos
 hbase.kerberos.regionserver.principal=hbase/_HOST@CWIZ.COM
 hbase.sasl.clientconfig=HBaseClient
+
+# To decrypt mysql password
+secret.key = DBj1X8tVSUnQGfSdbo1LhgzjFPa5yUYA
+
+# To support TSDB SSL endpoint
+tsd.ssl.enabled = <:ssl_enable:>
+tsdb.ssl.server.keystore = <:install_root:>/certs/opentsdb/server.jks
+tsdb.ssl.server.key.password = <:ssl_password:>
+tsdb.ssl.server.keystore.password = <:ssl_password:>
+tsdb.ssl.server.trust.keystore = <:install_root:>/certs/opentsdb/serverTrust.jks
+tsdb.ssl.server.trust.keystore.password = <:ssl_password:>
+
+# To support Mysql client using SSL to talk with mysql server
+tsd.mysql.url = jdbc:mysql://<:nginx_ip:>:3308/<:grafana_database:>
+tsd.mysql.user = <:mysql_username:>
+tsd.mysql.password = <:mysql_password:>
+mysql.ssl.enabled = <:ssl_enable:>
+mysql.ssl.keyStore = <:install_root:>/certs/mysql/client.jks
+mysql.ssl.keyStorePassword = <:ssl_password:>
+mysql.ssl.trustStore = <:install_root:>/certs/mysql/truststore.jks
+mysql.ssl.trustStorePassword = <:ssl_password:>
