--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -482,6 +482,8 @@ services:
       driver: none
       options:
         max-size: 50m
+    extra_hosts:
+      chartservice: 172.19.0.19
 
 #  umanager:
 #    image: cloudwiz/umanager:1.0.0
