--- a/template/nginx/conf/nginx_ssl.conf
+++ b/template/nginx/conf/nginx_ssl.conf
@@ -146,9 +146,9 @@ http {
 
         location /<:nginx_prefix:>_tsdb/ {
             proxy_pass http://opentsdb/;
-            #proxy_ssl_certificate <:install_root:>/certs/opentsdb/client.crt;
-            #proxy_ssl_certificate_key <:install_root:>/certs/opentsdb/client.key;
-            #proxy_ssl_trusted_certificate <:install_root:>/certs/opentsdb/ca.crt;
+            proxy_ssl_certificate <:install_root:>/certs/opentsdb/client.crt;
+            proxy_ssl_certificate_key <:install_root:>/certs/opentsdb/client.key;
+            proxy_ssl_trusted_certificate <:install_root:>/certs/opentsdb/ca.crt;
         }
 
         location /<:nginx_prefix:>_metrics/ {
@@ -301,9 +301,9 @@ http {
 
         location /_tsdb/ {
             proxy_pass http://opentsdb/;
-            #proxy_ssl_certificate <:install_root:>/certs/opentsdb/client.crt;
-            #proxy_ssl_certificate_key <:install_root:>/certs/opentsdb/client.key;
-            #proxy_ssl_trusted_certificate <:install_root:>/certs/opentsdb/ca.crt;
+            proxy_ssl_certificate <:install_root:>/certs/opentsdb/client.crt;
+            proxy_ssl_certificate_key <:install_root:>/certs/opentsdb/client.key;
+            proxy_ssl_trusted_certificate <:install_root:>/certs/opentsdb/ca.crt;
         }
 
         location /_metrics/ {
