--- a/template/opentsdb/conf/jaas.conf
+++ b/template/opentsdb/conf/jaas.conf
@@ -9,6 +9,6 @@ Client {
     com.sun.security.auth.module.Krb5LoginModule required
     useKeyTab=true
     storeKey=true
-    keyTab="/kerberos/centos.keytab"
+    keyTab="/kerberos/root.keytab"
     principal="root/opentsdb@CWIZ.COM";
 };
