--- a/template/nginx/conf/nginx_ssl.conf
+++ b/template/nginx/conf/nginx_ssl.conf
@@ -145,7 +145,7 @@ http {
         }
 
         location /<:nginx_prefix:>_tsdb/ {
-            proxy_pass http://opentsdb/;
+            proxy_pass https://opentsdb/;
             proxy_ssl_certificate <:install_root:>/certs/opentsdb/client.crt;
             proxy_ssl_certificate_key <:install_root:>/certs/opentsdb/client.key;
             proxy_ssl_trusted_certificate <:install_root:>/certs/opentsdb/ca.crt;
@@ -300,7 +300,7 @@ http {
         }
 
         location /_tsdb/ {
-            proxy_pass http://opentsdb/;
+            proxy_pass https://opentsdb/;
             proxy_ssl_certificate <:install_root:>/certs/opentsdb/client.crt;
             proxy_ssl_certificate_key <:install_root:>/certs/opentsdb/client.key;
             proxy_ssl_trusted_certificate <:install_root:>/certs/opentsdb/ca.crt;
